--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="0e37c9cb-d64b-4b78-bec5-1f8f65299e63" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Automate trading with smart signal execution" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://po-signaltrader.netlify.app/app_logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@DanielNjorogeKi" />
+    <meta name="twitter:image" content="https://po-signaltrader.netlify.app/app_logo.png" />
   </head>
 
   <body>
